...
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Send"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintTop_toBottomOf="@id/textFieldRecipient"
        app:layout_constraintEnd_toEndOf="parent"
...
